--- a/index.html
+++ b/index.html
@@ -19,14 +19,12 @@
       overflow-x: auto;
     }
 
-    /* Equation container styles from bond-specific.css */
+    /* Equation container styles - simple card */
     .equation-container {
-      background: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%);
-      border: 2px solid #cbd5e1;
-      border-radius: 12px;
+      background: white;
+      border: none;
       padding: 1.5rem;
       margin: 0 auto;
-      box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
       display: flex;
       justify-content: center;
       align-items: center;
@@ -105,7 +103,6 @@
 
       .equation-container {
         padding: 0.75rem;
-        border-radius: 8px;
       }
 
       math {
