--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
       --color-gray-50: #f9fafb;
       --color-gray-200: #e5e7eb;
       --color-gray-600: #4b5563;
-      --color-gray-700: #374151;
       --color-gray-800: #111827;
 
       /* Bond-specific colors */
@@ -34,7 +33,7 @@
       font-display: swap;
     }
 
-    /* === Base layout (aligned with calculator) ========================= */
+    /* === Base layout ================================================ */
     *,
     *::before,
     *::after {
@@ -50,7 +49,7 @@
 
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-      background-color: var(--color-gray-50);
+      background-color: transparent; /* transparent so it blends in */
       color: var(--color-gray-800);
       line-height: 1.5;
       padding: 1.5rem;
@@ -58,7 +57,7 @@
       font-size: clamp(0.875rem, 1vw + 0.5rem, 1rem);
     }
 
-    /* === Equation intro text =========================================== */
+    /* === Equation intro text ======================================== */
     .equation-intro {
       font-size: 0.875rem;
       color: var(--color-gray-600);
@@ -66,12 +65,12 @@
       text-align: left;
     }
 
-    /* === Equation container (from bond calculator) ===================== */
+    /* === Equation container ========================================= */
     .equation-container {
       padding: 1rem;
       margin: 0.75rem 0;
-      background: #ffffff;
-      border: 1px solid var(--color-gray-200);
+      background: transparent;              /* ✅ transparent background */
+      border: none;                         /* no border/card */
       border-radius: 0.5rem;
       overflow-x: auto;
       overflow-y: hidden;
@@ -79,9 +78,13 @@
       -webkit-overflow-scrolling: touch;
       container-type: inline-size;
       container-name: equation;
+
+      display: flex;                        /* ✅ centre the equation */
+      justify-content: center;
+      align-items: center;
     }
 
-    /* === MathML styling (from calculator) ============================== */
+    /* === MathML styling (from calculator) ========================== */
     math {
       font-family: var(--font-math);
       font-size: 1.125rem;
@@ -110,34 +113,34 @@
       padding-top: 0.25em;
     }
 
-    /* Responsive tweaks for smaller screens (mirroring calculator) */
+    /* Responsive tweaks */
     @media (max-width: 768px) {
-      .equation-container math {
-        font-size: 0.95em;
-      }
       .equation-container {
         padding: 0.75rem;
+      }
+      .equation-container math {
+        font-size: 0.95em;
       }
     }
 
     @media (max-width: 640px) {
-      .equation-container math {
-        font-size: 0.85em;
+      body {
+        padding: 1rem;
       }
       .equation-container {
         padding: 0.5rem;
       }
+      .equation-container math {
+        font-size: 0.85em;
+      }
     }
 
     @media (max-width: 480px) {
-      body {
-        padding: 1rem;
+      .equation-container {
+        padding: 0.25rem;
       }
       .equation-container math {
         font-size: 0.75em;
-      }
-      .equation-container {
-        padding: 0.25rem;
       }
     }
   </style>
@@ -195,3 +198,13 @@
               <mn>1</mn>
               <mo>+</mo>
               <mi mathcolor="#7a46ff">r</mi>
+              <mo>)</mo>
+            </mrow>
+            <mi mathcolor="#15803d">T</mi>
+          </msup>
+        </mfrac>
+      </mrow>
+    </math>
+  </div>
+</body>
+</html>
